kubernetes-ports-exposure/multi_ports_dep_svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-port-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-port-app
  template:
    metadata:
      labels:
        app: multi-port-app
    spec:
      containers:
      - name: multi-port-app
        image: public.ecr.aws/t1i1g9m6/multi-port-app
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: multi-port-app-service
spec:
  selector:
    app: multi-port-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
